# Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md  setup.sh
.cache/clangd/index/: camera.cpp.A687CA15445EDB4B.idx  camera.hpp.243D054781D2C4AE.idx  canvas.cpp.94E0F77521ACC0D3.idx  canvas.hpp.84F9024EB211E0B2.idx  color.cpp.755C4B7B88FC6C7A.idx  color.hpp.538B6874DAD34E26.idx  geo.hpp.32352EDE65E9A1DA.idx  hittable.cpp.05EA01A53E13E130.idx  hittable.hpp.F0DA9CF03BA3E214.idx  intersection.cpp.9D97E1EC88B351C9.idx  intersection.hpp.1DB948DD090A07FA.idx  intersection_state.cpp.016A11D2CFD28E00.idx  intersection_state.hpp.1872C83AC75F9157.idx  light.cpp.123E048A76E4450C.idx  light.hpp.73DE6CFA2FBE279E.idx  main.cpp.76D18A5D06CAA5C2.idx  material.cpp.294880CA92A9BFAA.idx  material.hpp.A8A786F9D8DBF520.idx  matrices.hpp.23E899ABCA478D30.idx  pattern.hpp.62B15BFB16C784B9.idx  patterns.cpp.A6BFE5DD025B080D.idx  plane.cpp.C9112F4DD8CA2675.idx  ray.cpp.2075FE12B955AF8D.idx  ray.hpp.BE9E31E9789A08AE.idx  scene.hpp.B3383F822B3F8294.idx  sphere.cpp.63DAF18CA32A44C2.idx  tuples.cpp.B090E70BAAC2A683.idx  tuples.hpp.4222B22E3651CD08.idx  utils.cpp.63434243186A7A4F.idx  utils.hpp.6BEBBBF94F261FBC.idx  world.cpp.59B1A614130A1FF6.idx  world.hpp.DD8FC18A2266F09E.idx  xform.hpp.86DBF552B79923F6.idx
application/: CMakeLists.txt
application/src/: main.cpp
docs/: camera.md  hittable.md  material.md  transformation_matrices.md  world.md
engine/: CMakeLists.txt
engine/docs/: world.md
engine/include/: thread_pool.hpp  utils.hpp
engine/include/color/: color.hpp  pattern.hpp
engine/include/geo/: intersection.hpp  intersection_state.hpp  ray.hpp  tuples.hpp
engine/include/image/: canvas.hpp  image.hpp
engine/include/scene/: camera.hpp  hittable.hpp  light.hpp  material.hpp  scene.hpp  world.hpp
engine/include/xform/: matrices.hpp  xform.hpp
engine/src/: main.cpp  utils.cpp
engine/src/color/: color.cpp  patterns.cpp
engine/src/geo/: intersection.cpp  intersection_state.cpp  ray.cpp  tuples.cpp
engine/src/image/: canvas.cpp
engine/src/scene/: camera.cpp  light.cpp  material.cpp  world.cpp
engine/src/scene/hittables/: cube.cpp  hittable.cpp  plane.cpp  sphere.cpp
engine/tests/: main_test.cpp  test_camera.cpp  test_canvas.cpp  test_matrices.cpp  test_plane.cpp  test_ray.cpp  test_tuples.cpp  test_world.cpp
include/: camera.hpp  canvas.hpp  hittable.hpp  intersection.hpp  intersection_state.hpp  light.hpp  material.hpp  matrices.hpp  ray.hpp  tuples.hpp  utils.hpp  world.hpp
include/color/: color.hpp  pattern.hpp
include/geo/: geo.hpp  intersection.hpp  intersection_state.hpp  ray.hpp  tuples.hpp
include/image/: canvas.hpp
include/scene/: camera.hpp  hittable.hpp  light.hpp  material.hpp  scene.hpp  world.hpp
include/xform/: matrices.hpp
ray_application/src/main/java/com/ray_application/: Main.java
ray_application/src/main/java/com/ray_application/sceneCreater/: Engine.java  PPMReader.java  SceneJsonBuilder.java
ray_application/src/main/java/com/ray_application/ui/: MainUI.java
scene_builder/: CMakeLists.txt
scene_builder/include/: build_scene.hpp
scene_builder/src/: build_scene.cpp  main.cpp
src/: camera.cpp  canvas.cpp  hittable.cpp  intersection.cpp  intersection_state.cpp  light.cpp  main.cpp  material.cpp  matrices.cpp  ray.cpp  tuples.cpp  utils.cpp  world.cpp
src/color/: color.cpp
src/geo/: intersection.cpp  intersection_state.cpp  ray.cpp  tuples.cpp
src/scene/: camera.cpp  hittable.cpp  light.cpp  material.cpp  world.cpp
src/scene/hittables/: hittable.cpp  sphere.cpp
src/xform/: matrices.cpp
tests/: CMakeLists.txt  test_camera.cpp  test_canvas.cpp  test_intersection.cpp  test_intersection_state.cpp  test_lighting.cpp  test_material.cpp  test_matrices.cpp  test_pattern.cpp  test_plane.cpp  test_ray.cpp  test_sphere.cpp  test_tuples.cpp  test_world.cpp
tests/.cache/clangd/index/: gmock-actions.h.E832DEBA7BF921CC.idx  gmock-all.cc.BCD6D26FDAB02F65.idx  gmock-cardinalities.cc.25C5457D43A78F03.idx  gmock-cardinalities.h.07E987E405A56D88.idx  gmock-function-mocker.h.4A4680C399067A47.idx  gmock-generated-actions.h.B5E8F76E2EEA2447.idx  gmock-internal-utils.cc.2F3597BDA2110313.idx  gmock-internal-utils.h.6891241C9C20EBAA.idx  gmock-matchers.cc.C347EA519B55B949.idx  gmock-matchers.h.4A4D777BAA59FF12.idx  gmock-matchers.h.86BAFEEF3B867D7C.idx  gmock-more-actions.h.4A82F9960B7695F7.idx  gmock-more-matchers.h.627D038B878A73AC.idx  gmock-nice-strict.h.B91E2CA180A6D14C.idx  gmock-port.h.CD34DCCBAF826812.idx  gmock-port.h.D7ADAABB4E0EBF2C.idx  gmock-pp.h.347E2E3012F591C8.idx  gmock-spec-builders.cc.716D46D92E2C84D4.idx  gmock-spec-builders.h.EC55A7F6C23DBB26.idx  gmock.cc.0C216E59D7D6997B.idx  gmock.h.5AA8E580BB1DE61E.idx  gmock_main.cc.E2A185E155F2F615.idx  gtest-all.cc.744DBBC5766BCB87.idx  gtest-assertion-result.cc.4067BE561F23F849.idx  gtest-assertion-result.h.62428DDFC1FF0A44.idx  gtest-death-test-internal.h.0EE5B4461D4356D0.idx  gtest-death-test.cc.68CE5F67FB491EAA.idx  gtest-death-test.h.E05FA9E0A70B4988.idx  gtest-filepath.cc.957931AF70AED650.idx  gtest-filepath.h.649B01173B8EA33F.idx  gtest-internal-inl.h.CF1E8C636F4F2268.idx  gtest-internal.h.047D94A2892C8145.idx  gtest-matchers.cc.034795076F5BDC03.idx  gtest-matchers.h.B9796AD0B2700845.idx  gtest-message.h.8BCAEC9C1A0E6FD4.idx  gtest-param-test.h.C6A9E52D6415AD14.idx  gtest-param-util.h.D9080835C75BE57C.idx  gtest-port-arch.h.7D2F453359EAAA14.idx  gtest-port.cc.FB397BEC096A12AA.idx  gtest-port.h.143ACD4FA526AE7D.idx  (+30 more)
(+2 files in other folders)
